--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,7 +70,7 @@
                 android:layout_marginRight="30dp"
                 android:layout_marginTop="30dp">
 
-                <ImageV iew
+                <ImageView
                     android:id="@+id/imageView_userIcon"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
@@ -222,6 +222,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/signup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/linearLayout2"
